--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "astro": "^2.0.10",
-    "astro-i18next": "1.0.0-beta.17",
-    "i18next": "^22.4.9",
-    "i18next-fs-backend": "^2.1.1",
-    "i18next-http-backend": "^2.1.1"
+    "astro": "^2.0.10"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
     "vitest": "^0.28.5"
