--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,9 @@ jobs:
           node-version: "16.x"
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install -g pnpm
+          pnpm install
 
       - name: Lint code
-        run: npx lint-staged
+        run: pnpm run lint
