--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,9 @@ jobs:
           node-version: "16.x"
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install -g pnpm
+          pnpm install
 
       - name: Run tests
-        run: npm run vitest
+        run: pnpm test
