--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "prepare": "husky install",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "prettier --check ."
   },
   "dependencies": {
     "@astrolib/seo": "^0.3.0",
